@@ -2,6 +2,8 @@
 	- iana portlist updated.
 	- Fix chroot auth-zone fix to remove chroot prefix.
 	- tag for 1.8.2rc1.
+	- Fix that unbound-checkconf does not complains if the config file
+	  is not placed inside the chroot.
 
 28 November 2018: Wouter
 	- Fix leak in chroot fix for auth-zone.
